# Dawsatek22-wiringPi_example-in-c-Cmake-in-english

./: README.md
eng_codes/: CMakeLists.txt  blink_eng.cpp
